--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -26,4 +26,47 @@
     width: 100%;
     height: 300px;
   }
+
+  .imageContainer {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+  }
+  
+  .overlayContent {
+    text-align: center;
+    color: #fff;
+  }
+  
+  .imageContainer:hover .overlay {
+    opacity: 1;
+  }
+
+  .movie.hovered .overlay {
+    opacity: 1;
+  }
+  
+  .overlay {
+    /* Your existing overlay styles */
+    opacity: 0;
+  }
+  
+  
+  
+
+
   
