--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -1,30 +1,31 @@
 .header {
-    padding: 200px;
-    text-align: center;
-    background: #2f2b59;
-    background-image: url('../../public/the-avengers-movie-poster-banners-.jpg');
-    color: white;
-    font-size: 30px;
-    position: relative; /* Add position relative */
-    overflow: hidden; /* Hide overflowing images */
-  }
+  padding: 200px;
+  text-align: center;
+  background: #2f2b59;
+  color: white;
+  font-size: 30px;
+  position: relative;
+  overflow: hidden;
+}
 
-.image header{
-    -webkit-filter: blur(10px);
-    filter: blur(10px);
-  }
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 
-  .image {
-    position: absolute; /* Position the images absolutely */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0; /* Hide all images initially */
-    transition: opacity 0.5s ease; /* Add transition effect */
-  }
-  
-  .image.active {
-    opacity: 1; /* Show active image */
-  }
+.carousel img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.carousel img.active {
+  opacity: 1;
+}
+
   
