--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -1,7 +1,7 @@
 .header {
   padding: 200px;
   text-align: center;
-  background: #2f2b59;
+  background-image: url('../../public/Dune-Banner.jpg');
   color: white;
   font-size: 30px;
   position: relative;
