was fixing my styling as well as doing the auth

--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -1,7 +1,7 @@
 .header {
   padding: 200px;
   text-align: center;
-  background-image: url('../../public/Dune-Banner.jpg');
+  background-image: url('../../public/old_movie_poster_banner\ \(1\).jpg');
   color: white;
   font-size: 30px;
   position: relative;
