--- a/components/SignIn/SignIn.module.css
+++ b/components/SignIn/SignIn.module.css
@@ -10,10 +10,19 @@
   height: 459px; 
   width: 390px;
   }
+
+  .signInHeading h1{
+    color: aliceblue;
+    font-size: 40px;
+    margin-top: 122px;
+    margin-bottom: 58px;
+    margin-right: -132px;
+    margin-left: 738px;
+  }
   
   .InputsContainer {
     margin-bottom: 40px;
-    margin-top: 276px;
+    margin-top: 283px;
     margin-right: 17px;
     margin-left: 20px;
   }
